<resources>
    <string name="app_name">Techlauto</string>
    <string name="document_name">LAUDO</string>
    <string name="title_home">Em andamento</string>
    <string name="title_reports_completed">Finalizados</string>
    <string name="title_settings">Configurações</string>
    <string name="label_distributor">Distribuidor</string>
    <string name="label_client">Cliente</string>
    <string name="label_partReference">Referência da peça</string>
    <string name="label_cityState">Cidade/UF</string>
    <string name="label_sourceInvoice">Nota fiscal de origem</string>
    <string name="label_invoiceDate">Data da nota</string>
    <string name="label_applicationDate">Data da aplicação/montagem</string>
    <string name="label_warrantyDate">Data de retorno/garantia</string>
    <string name="label_technicalConsultant">Nome do consultor </string>
    <string name="label_analysisDate">Data da análise</string>
    <string name="label_technicalConsultantContact">Telefone do consultor</string>
    <string name="snackbar_option_camera_text">CÂMERA</string>
    <string name="snackbar_option_gallery_text">GALERIA</string>
    <string name="permisson_camera_message1">Você precisa permitir o acesso à câmera para continuar.</string>
    <string name="permissions_message">Você precisa habilitar as permissões solicitadas para continuar. Deseja ir para configurações do aplicativo para habilitar o uso da câmera?</string>
    <string name="permission_memory_message">Você precisa permitir o acesso à mémoria para continuar.</string>
    <string name="document_title">LAUDO DE GARANTIA</string>
    <string name="document_n">N°:</string>
    <string name="document_company">EMPRESA:</string>
    <string name="document_distributor">Distribuidor:</string>
    <string name="document_cityState">Cidade/Estado:</string>
    <string name="document_client">Cliente:</string>
    <string name="document_partReference">Referência da peça:</string>
    <string name="document_sourceInvoice">Nota fiscal de Origem:</string>
    <string name="document_invoiceDate">Data da Nota:</string>
    <string name="document_applicationDate">Data da aplicação:</string>
    <string name="document_warrantDate">Data do retorno:</string>
    <string name="document_technicalAdvices">Parecer Técnico:</string>
    <string name="document_reasonUnfounded">Motivo da improcedência da Garantia:</string>
    <string name="document_comments">Observações:</string>
    <string name="document_technicalConsultant">Consultor Técnico:</string>
    <string name="document_analisysDate">Data:</string>
    <string name="document_technicalConsultantContact">Telefone:</string>
    <string name="preview_title">Visualização</string>
    <string name="warranty_title">Laudo</string>
    <string name="comments">Observações</string>
    <string name="reason_unfounded">Motivo da improcedência</string>
    <string name="action_text_import_data">Importar dados</string>
    <string name="confirm_save_report_message">Deseja salvar o laudo?</string>
    <string name="dialog_button_confirm_text">Sim</string>
    <string name="dialog_button_cancel_text">Cancelar</string>
    <string name="dialog_message_no_save_file">Não foi possível salvar o arquivo.</string>
    <string name="dialog_no_found_file_message">Arquivo não encontrado! Deseja gerar o arquivo novamente?</string>
    <string name="select_file_message">Selecione o arquivo</string>
    <string name="no_data_to_import">Sem dados para importar.</string>
    <string name="desconnected_profile_name">Desconectado</string>
    <string name="action_backap_data">Salvar backap da base</string>
    <string name="default_message_progress">Por favor aguarde</string>
    <string name="drive_access_error">Não foi possível obter acesso ao google drive.</string>
    <string name="export_data_error">Não foi possível exportar os dados da base para o arquivo de backap</string>
    <string name="export_data_success">Arquivo para exportação de dados criado com sucesso.</string>
    <string name="upload_backap_start">Salvando backap no drive</string>
    <string name="upload_backap_success">Backap salvo no drive com sucesso.</string>
    <string name="upload_backap_error">Não foi possível salvar o backap no drive.</string>
    <string name="download_backap_error">Não foi possível fazer o download do backap.</string>
    <string name="download_backap_success">Download do backap completado sem erros.</string>
    <string name="download_backap_success_no_data">Sem backap para restaurar.</string>
    <string name="search_backap_data_message">Procurando backap no drive</string>
    <string name="import_data_success">Dados importados com sucesso!</string>
    <string name="import_data_error">Não foi possível importar o arquivo de dados.</string>
    <string name="import_data_format_file_error">Erro ao converter o arquivo para o formato esperado.</string>
    <string name="logout_with_save_backap_message">Deseja salvar backap dos dados antes de desconectar?</string>
    <string name="logout_save_and_desconect_action">Salvar backap e desconectar</string>
    <string name="logout_desconect_action">Desconectar</string>
    <string name="cancel_action">Cancelar</string>
    <string name="permission_storage_rationale_message">O app precisa acessar o armazenamento para continuar.</string>
    <string name="permission_camera_rationale_message">O app precisa acessar a câmera para continuar.</string>
    <string name="upload_database_success">Upload da base de dados finalizado</string>
    <string name="upload_database_error">Erro ao fazer upload da base de dados</string>
    <string name="upload_files_success">Upload dos arquivos finalizado</string>
    <string name="upload_files_error">Erro ao fazer upload dos arquivos</string>
    <string name="upload_backap_error_message">Ocorreu um erro ao salvar os dados no drive</string>
    <string name="download_database_success">Download da base de dados finalizado</string>
    <string name="download_database_error">Erro ao fazer download da base de dados</string>
    <string name="download_files_success">Download dos arquivos finalizado</string>
    <string name="download_files_error">Erro ao fazer download dos arquivos</string>
    <string name="drive_access_denied">Para usar o recurso de backap e restauração dos dados, é precisso autorizar o acesso do aplicativo aos recursos da sua conta google.</string>
    <string name="title_page_01">Selecione a marca</string>
    <string name="title_page_02">Preencha os campos do distribuidor</string>
    <string name="title_page_03">Preencha os campos da nota fiscal</string>
    <string name="title_page_04">Preencha os campos do parecer técnico</string>
    <string name="title_page_05">Preencha os campos do consultor pós vendas</string>
    <string name="title_page_06">Selecione as fotos</string>
</resources>
