<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ireny.warrantyreport.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_reportscompleted"
        android:name="com.ireny.warrantyreport.ui.reportscompleted.ReportsCompletedFragment"
        android:label="@string/title_reports_completed"
        tools:layout="@layout/fragment_reports_completed" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ireny.warrantyreport.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>